[package]
name = "iso9660"
version = "0.1.0"
authors = ["Ian Douglas Scott <ian@iandouglasscott.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ids1024/iso9660-rs"

[dependencies]
time = "0.1"
bitflags = "1.0"
nom = "5.0"

[dev-dependencies]
md5 = "0.3"
fuse = "0.3"
libc = "0.2"
