[package]
name = "iso9660"
description = "(Incomplete) implementation of ISO9660 filesystem"
version = "0.1.1"
authors = ["Ian Douglas Scott <ian@iandouglasscott.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ids1024/iso9660-rs"

[dependencies]
time = "0.3"
bitflags = "2.0"
nom = "7.1"

[dev-dependencies]
md5 = "0.7"
fuser = "0.13"
libc = "0.2"

[features]
default = []
nightly = []
